money maa changes

--- a/bonds.html
+++ b/bonds.html
@@ -43,7 +43,7 @@
     </div>
 
     <div class="header-area">
-        <div id="sticky-wrapper" class="sticky-wrapper" style="height: 90px;"><div class="sticky-area">
+        <div id="sticky-wrapper" class="sticky-wrapper"><div class="sticky-area">
             <div class="navigation">
                 <div class="container-fluid p-0 m-0">
                     <div class="header-inner-box">     
@@ -131,7 +131,8 @@
 
         <div class="mobile-header green-bg">
             <div class="container header-container mobile-menu-container">
-                <div class="mobile-logo"> <a class="navbar-brand fw-bold" href="index.html"><img src="images/logo-round-t.png" alt=""></a></div>
+                <div class="mobile-logo"> <a class="navbar-brand fw-bold" href="index.html"><img src="images/logo-round-t.png" alt=""></a>
+                    <span class="text-white">Money Maa</span></div>
                 <div class="mobile-menu">
                     <button class="hamburger">&#9776;</button>
                     <button class="cross">&#735;</button>
@@ -143,34 +144,32 @@
                         <ul class="nav__sub">
                             <li class="nav__item"><a class="sub__close" href="#"><i class="fas fa-chevron-left"></i> Back</a></li>
                             <li class="nav__item">
-                              <a class="nav__link" href="mutual-funds.html">Mutual Funds</a>
-                            </li>
-                            <li class="nav__item">
-                              <a class="nav__link" href="retirement-saving.html">Retirement Planning</a>
-                            </li>
-                            <li class="nav__item">
-                              <a class="nav__link" href="child-future-saving.html">Child Future Saving</a>
-                            </li>
-                            <li class="nav__item">
-                              <a class="nav__link" href="life-insurance.html">Life Insurance</a>
+                              <a class="nav__link" href="dmat.html">DEMAT</a>
                             </li>
                             <li class="nav__item">
                               <a class="nav__link" href="health-insurance.html">Health Insurance</a>
                             </li>
                             <li class="nav__item">
-                              <a class="nav__link" href="home-insurance.html">Home Insurance</a>
+                              <a class="nav__link" href="mutual-funds.html">Mutual Funds</a>
                             </li>
                             <li class="nav__item">
-                              <a class="nav__link" href="motor-insurance.html">Motor Insurance</a>
+                              <a class="nav__link" href="life-insurance.html">Term Plan Insurance</a>
                             </li>
                             <li class="nav__item">
-                              <a class="nav__link" href="com-property.html">Commercial Property Insurance</a>
+                              <a class="nav__link" href="child-future-saving.html">Child Future Saving</a>
                             </li>
                             <li class="nav__item">
-                              <a class="nav__link" href="bonds.html">Corporate Bonds</a>
+                              <a class="nav__link" href="retirement-saving.html">Retirement Planning</a>
+                            </li>
+                            <li class="nav__item">
+                              <a class="nav__link" href="general-insurance.html">Other Insurance</a>
+                            </li>
                             </li>
                             <li class="nav__item">
                               <a class="nav__link" href="pms-aif.html">PMS</a>
+                            </li>
+                            <li class="nav__item">
+                              <a class="nav__link" href="itr.html">ITR Filing</a>
                             </li>
                         </ul>
                     </a>
