--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
 
     <div class="header-area">
-        <div id="sticky-wrapper" class="sticky-wrapper" style="height: 90px;"><div class="sticky-area">
+        <div id="sticky-wrapper" class="sticky-wrapper"><div class="sticky-area">
             <div class="navigation">
                 <div class="container">
                     <div class="header-inner-box">     
@@ -146,7 +146,8 @@
 
     <div class="mobile-header green-bg">
         <div class="container header-container mobile-menu-container">
-            <div class="mobile-logo"> <a class="navbar-brand fw-bold" href="index.html"><img src="images/logo-round-t.png" alt=""></a></div>
+            <div class="mobile-logo"> <a class="navbar-brand fw-bold" href="index.html"><img src="images/logo-round-t.png" alt=""></a>
+            <span class="text-white">Money Maa</span></div>
             <div class="mobile-menu">
                 <button class="hamburger">&#9776;</button>
                 <button class="cross">&#735;</button>
@@ -158,34 +159,32 @@
                     <ul class="nav__sub">
                         <li class="nav__item"><a class="sub__close" href="#"><i class="fas fa-chevron-left"></i> Back</a></li>
                         <li class="nav__item">
-                          <a class="nav__link" href="mutual-funds.html">Mutual Funds</a>
-                        </li>
-                        <li class="nav__item">
-                          <a class="nav__link" href="retirement-saving.html">Retirement Planning</a>
-                        </li>
-                        <li class="nav__item">
-                          <a class="nav__link" href="child-future-saving.html">Child Future Saving</a>
-                        </li>
-                        <li class="nav__item">
-                          <a class="nav__link" href="life-insurance.html">Life Insurance</a>
+                          <a class="nav__link" href="dmat.html">DEMAT</a>
                         </li>
                         <li class="nav__item">
                           <a class="nav__link" href="health-insurance.html">Health Insurance</a>
                         </li>
                         <li class="nav__item">
-                          <a class="nav__link" href="home-insurance.html">Home Insurance</a>
+                          <a class="nav__link" href="mutual-funds.html">Mutual Funds</a>
                         </li>
                         <li class="nav__item">
-                          <a class="nav__link" href="motor-insurance.html">Motor Insurance</a>
+                          <a class="nav__link" href="life-insurance.html">Term Plan Insurance</a>
                         </li>
                         <li class="nav__item">
-                          <a class="nav__link" href="com-property.html">Commercial Property Insurance</a>
+                          <a class="nav__link" href="child-future-saving.html">Child Future Saving</a>
                         </li>
                         <li class="nav__item">
-                          <a class="nav__link" href="bonds.html">Corporate Bonds</a>
+                          <a class="nav__link" href="retirement-saving.html">Retirement Planning</a>
+                        </li>
+                        <li class="nav__item">
+                          <a class="nav__link" href="general-insurance.html">Other Insurance</a>
+                        </li>
                         </li>
                         <li class="nav__item">
                           <a class="nav__link" href="pms-aif.html">PMS</a>
+                        </li>
+                        <li class="nav__item">
+                          <a class="nav__link" href="itr.html">ITR Filing</a>
                         </li>
                     </ul>
                 </a>
@@ -205,16 +204,19 @@
                 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="images/slider-1.jpg" alt="">
+                        <img src="images/slider-1.jpeg" alt="">
                       </div>
                       <div class="carousel-item">
                         <img src="images/slider-2.jpeg" alt="">
                       </div>
                       <div class="carousel-item">
-                        <img src="images/slider-3.jpeg" alt="">
+                        <img src="images/slider-3.jpg" alt="">
                       </div>
                       <div class="carousel-item">
                         <img src="images/slider-4.jpeg" alt="">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/slider-5.jpeg" alt="">
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -227,20 +229,6 @@
                     </button>
                   </div>
                 </div>
-                    <!-- <div class="client-area wow fadeInUp reveal" data-wow-delay="200ms" style="animation-delay: 200ms;">
-                <div class="client-area-inner">
-                    <div class="client-area-title">
-                        <h6>Trusted Over 240+ Client</h6>
-                    </div>
-                </div>
-                <div class="help-btn">How can we help you?</div>
-                    </div> -->
-            <!-- <div class="hero-area-content wow fadeInUp animated" data-wow-delay="200ms" style="animation-delay: 200ms; visibility: visible; animation-name: fadeInUp;">            
-                <h3>Your Trusted Financial Advisor.</h3>
-                <h1>Trustworthy Financial <br>Advisor</h1>            
-                <p>
-                    Welcome to Money Maa, where financial empowerment meets personalized guidance. We understand that your financial journey is unique, and at Money Maa, we are dedicated to providing tailored solutions to help you achieve your goals.<a href="about.html">Discover More</a> </p>                    
-            </div> -->
         </div>
     </div>
 
@@ -348,64 +336,6 @@
             </div>
         </div>
     </div>
-
-    <!-- counter section -->
-
-
-    <!-- about section  -->
-
-    <!-- <div class="about-section white-bg section-padding">
-        <div class="container header-container">
-            <div class="row">
-                <div class="col-xl-6 col-lg-6 col-12 wow fadeInLeft reveal" data-wow-delay="100ms" style="animation-delay: 100ms;">
-                    <div class="about-bg-one" data-background="assets/img/about/about-1.jpg" style="background-image: url('images/about-1.png');">                        
-                        <div class="about-tag-title">
-                            <h4>We Have More Than 8 Years of Experience</h4>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-6 col-lg-6 col-12 wow fadeInUp reveal" data-wow-delay="200ms" style="animation-delay: 200ms;">
-                    <div class="about-content-wrap">
-                        <div class="section-title">
-                            <h6>About Company</h6>
-                            <h2>Professional Approach 
-                                and Quality Services</h2>
-                        </div>
-                        <p>
-                            In a landscape of continual financial market fluctuations, investors require the expertise of a qualified, trained, and unbiased professional to navigate the complexities and achieve their diverse short-term and long-term financial aspirations. </p>
-                        <div class="about-feature-list">
-                            <ul>
-                                <li><i class="fa-solid fa-check"></i> Best Financial Planning Service</li>
-                                <li><i class="fa-solid fa-check"></i>Business Strategy &amp; Growth</li>
-                                <li><i class="fa-solid fa-check"></i>Highly Dedicated Team  </li>
-                                <li><i class="fa-solid fa-check"></i>99.9% Customer Satisfaction</li>
-                                
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">                
-                <div class="col-xl-6 col-lg-6 col-12 text-end wow fadeInUp reveal" data-wow-delay="100ms"  style="animation-delay: 100ms;">
-                    <div class="about-content-wrap pr-60">
-                        <div class="section-title">
-                            <h6>Who We Are</h6>
-                            <h2>Providing Quality Financial
-                                Services &amp; Consulting</h2>
-                        </div>
-                        <p>Our dedicated team of seasoned financial advisors is committed to providing the guidance needed to thrive in this dynamic environment. Trust us to be your steadfast partner, helping you make informed decisions and secure a future aligned with your financial goals.</p>
-                    </div>
-                </div>
-                <div class="col-xl-6 col-lg-6 col-12 wow fadeInRight  animated" data-wow-delay="200ms">
-                    <div class="about-bg-two" data-background="assets/img/about/about-2.jpg" style="background-image: url('images/about-2.jpg');">                        
-                        <div class="about-tag-title">
-                            <h4>99.9% Customer Satisfaction</h4>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
 
     <!-- CTA section -->
 
@@ -598,7 +528,7 @@
     <!-- contact section -->
 
     <div class="contact-area section-padding pt-0">
-        <div class="container header-container pt-5">
+        <div class="container">
             <div class="contact-section-inner">
                 <div class="contact-section-content">
                     <h2 class="text-white">Want to work with us?</h2>
