--- a/life-insurance.html
+++ b/life-insurance.html
@@ -43,7 +43,7 @@
     </div>
 
     <div class="header-area">
-        <div id="sticky-wrapper" class="sticky-wrapper" style="height: 90px;"><div class="sticky-area">
+        <div id="sticky-wrapper" class="sticky-wrapper"><div class="sticky-area">
             <div class="navigation">
                 <div class="container">
                     <div class="header-inner-box">     
@@ -131,7 +131,8 @@
 
         <div class="mobile-header green-bg">
             <div class="container header-container mobile-menu-container">
-                <div class="mobile-logo"> <a class="navbar-brand fw-bold" href="index.html"><img src="images/logo-round-t.png" alt=""></a></div>
+                <div class="mobile-logo"> <a class="navbar-brand fw-bold" href="index.html"><img src="images/logo-round-t.png" alt=""></a>
+                    <span class="text-white">Money Maa</span></div>
                 <div class="mobile-menu">
                     <button class="hamburger">&#9776;</button>
                     <button class="cross">&#735;</button>
@@ -143,34 +144,32 @@
                         <ul class="nav__sub">
                             <li class="nav__item"><a class="sub__close" href="#"><i class="fas fa-chevron-left"></i> Back</a></li>
                             <li class="nav__item">
-                              <a class="nav__link" href="mutual-funds.html">Mutual Funds</a>
-                            </li>
-                            <li class="nav__item">
-                              <a class="nav__link" href="retirement-saving.html">Retirement Planning</a>
-                            </li>
-                            <li class="nav__item">
-                              <a class="nav__link" href="child-future-saving.html">Child Future Saving</a>
-                            </li>
-                            <li class="nav__item">
-                              <a class="nav__link" href="life-insurance.html">Life Insurance</a>
+                              <a class="nav__link" href="dmat.html">DEMAT</a>
                             </li>
                             <li class="nav__item">
                               <a class="nav__link" href="health-insurance.html">Health Insurance</a>
                             </li>
                             <li class="nav__item">
-                              <a class="nav__link" href="home-insurance.html">Home Insurance</a>
+                              <a class="nav__link" href="mutual-funds.html">Mutual Funds</a>
                             </li>
                             <li class="nav__item">
-                              <a class="nav__link" href="motor-insurance.html">Motor Insurance</a>
+                              <a class="nav__link" href="life-insurance.html">Term Plan Insurance</a>
                             </li>
                             <li class="nav__item">
-                              <a class="nav__link" href="com-property.html">Commercial Property Insurance</a>
+                              <a class="nav__link" href="child-future-saving.html">Child Future Saving</a>
                             </li>
                             <li class="nav__item">
-                              <a class="nav__link" href="bonds.html">Corporate Bonds</a>
+                              <a class="nav__link" href="retirement-saving.html">Retirement Planning</a>
+                            </li>
+                            <li class="nav__item">
+                              <a class="nav__link" href="general-insurance.html">Other Insurance</a>
+                            </li>
                             </li>
                             <li class="nav__item">
                               <a class="nav__link" href="pms-aif.html">PMS</a>
+                            </li>
+                            <li class="nav__item">
+                              <a class="nav__link" href="itr.html">ITR Filing</a>
                             </li>
                         </ul>
                     </a>
@@ -202,30 +201,29 @@
 
     <!-- service page -->
 
-    <div class="service-page pb-60">
+    <div class="service-page section-padding pb-60">
         <div class="container">
              <div class="col-xl-12">
                  <div class="service-page-content">
-                     <p>At Money Maa, we understand that life is a journey filled with unforeseen twists and turns. Our life insurance services are designed to be the reliable anchor that ensures you and your loved ones sail through these uncertainties with financial security. We believe that life insurance is not just a policy; it's a promise to shield the dreams and aspirations you've worked so hard to build. <br> <br>
-                        Money Maa offers a comprehensive suite of life insurance solutions that cater to the unique needs of individuals and families. Whether you are seeking coverage for income replacement, mortgage protection, or a legacy to pass on to the next generation, our diverse range of policies, including term life and whole life insurance, provides a tailored approach to your specific requirements. Our seasoned financial advisors work closely with you to understand your goals and craft a personalized life insurance strategy that aligns with your present circumstances and future aspirations. <br> <br>
-                        Beyond the financial benefits, Money Maa's life insurance services embody a commitment to empathy and support during challenging times. We stand as a pillar of strength, guiding you through the intricacies of life insurance, offering not just policies but peace of mind. With Money Maa, your life insurance isn't just a contract; it's a testament to our dedication to safeguarding the well-being and futures of you and your loved ones.</p>
-                     <h2>Keynotes for Effective Life Insurance</h2>
+                     <p>Term life insurance is a type of life insurance policy that provides coverage for a specified period, typically ranging from 5 to 30 years. During this period, known as the "term," the insured pays a fixed premium to the insurance company. If the insured individual passes away within the term, the policy pays out a death benefit to the designated beneficiaries.<br> <br>
+                        Term life insurance is often chosen for its affordability and simplicity. It offers pure protection without any cash value accumulation or investment component. Policyholders have the flexibility to select the coverage amount and term length based on their needs, such as providing financial support for dependents, paying off debts, or covering mortgage expenses. <br> <br></p>
+                     <h2>Benefits of Term Plan Insurance</h2>
                      <div class="about-feature-list service-list">
                         <div class="row">
                             <div class="col-md-6 col-12">
                                 <ul>
-                                    <li><i class="fa-solid fa-check"></i>Financial Security</li>
-                                    <p>Life insurance provides a financial safety net for your family in the event of your passing. It covers funeral expenses, outstanding debts, and ongoing living costs, offering peace of mind during challenging times.</p>
-                                        <li><i class="fa-solid fa-check"></i>Income Replacement</li> 
-                                        <p>Replace lost income: Life insurance ensures your family can maintain their lifestyle and meet financial obligations even after you're gone. Choose from term life or permanent life insurance based on your preferences and long-term financial goals.</p>                                       
+                                    <li><i class="fa-solid fa-check"></i>Financial Protection</li>
+                                    <p>Term life insurance provides a death benefit to the beneficiaries if the insured individual passes away during the policy term. This benefit can help replace lost income, pay off debts, cover living expenses, and maintain the financial stability of dependents.</p>
+                                        <li><i class="fa-solid fa-check"></i>Affordability</li> 
+                                        <p>Term life insurance typically offers higher coverage amounts for lower premiums compared to permanent life insurance policies. This affordability makes it accessible for individuals who need substantial coverage but have limited budgets.</p>                                       
                                 </ul>
                             </div>
                             <div class="col-md-6 col-12">
                                 <ul>
-                                    <li><i class="fa-solid fa-check"></i>Flexible Coverage</li>
-                                    <p>Tailored to your needs: Choose from a range of life insurance options, including term life, whole life, and universal life, allowing you to customize coverage to fit your unique situation.</p>
-                                    <li><i class="fa-solid fa-check"></i>Cash Value Accumulation</li>
-                                    <p>Build cash value: Some life insurance policies offer a cash value component that grows over time, providing a potential source of funds for emergencies or opportunities.</p>
+                                    <li><i class="fa-solid fa-check"></i>Flexibility</li>
+                                    <p>Term life insurance policies offer flexibility in choosing the coverage amount and term length to align with specific financial goals and family needs. Policyholders can customize their coverage based on factors such as age, income, and dependents.</p>
+                                    <li><i class="fa-solid fa-check"></i>Simple and Transparent</li>
+                                    <p>Term life insurance policies are straightforward and easy to understand, with no cash value accumulation or investment features. The premiums are fixed for the duration of the term, making it easier for policyholders to budget and plan for future expenses.</p>
                                 </ul>
                             </div>
                         </div>
