--- a/calculators.html
+++ b/calculators.html
@@ -42,7 +42,7 @@
     </div>
 
     <div class="header-area">
-        <div id="sticky-wrapper" class="sticky-wrapper" style="height: 90px;"><div class="sticky-area">
+        <div id="sticky-wrapper" class="sticky-wrapper"><div class="sticky-area">
             <div class="navigation">
                 <div class="container">
                     <div class="header-inner-box">     
@@ -130,7 +130,8 @@
 
         <div class="mobile-header green-bg">
             <div class="container header-container mobile-menu-container">
-                <div class="mobile-logo"> <a class="navbar-brand fw-bold" href="index.html"><img src="images/logo-round-t.png" alt=""></a></div>
+                <div class="mobile-logo"> <a class="navbar-brand fw-bold" href="index.html"><img src="images/logo-round-t.png" alt=""></a>
+                    <span class="text-white">Money Maa</span></div>
                 <div class="mobile-menu">
                     <button class="hamburger">&#9776;</button>
                     <button class="cross">&#735;</button>
@@ -142,40 +143,38 @@
                         <ul class="nav__sub">
                             <li class="nav__item"><a class="sub__close" href="#"><i class="fas fa-chevron-left"></i> Back</a></li>
                             <li class="nav__item">
-                              <a class="nav__link" href="mutual-funds.html">Mutual Funds</a>
-                            </li>
-                            <li class="nav__item">
-                              <a class="nav__link" href="retirement-saving.html">Retirement Planning</a>
-                            </li>
-                            <li class="nav__item">
-                              <a class="nav__link" href="child-future-saving.html">Child Future Saving</a>
-                            </li>
-                            <li class="nav__item">
-                              <a class="nav__link" href="life-insurance.html">Life Insurance</a>
+                              <a class="nav__link" href="dmat.html">DEMAT</a>
                             </li>
                             <li class="nav__item">
                               <a class="nav__link" href="health-insurance.html">Health Insurance</a>
                             </li>
                             <li class="nav__item">
-                              <a class="nav__link" href="home-insurance.html">Home Insurance</a>
+                              <a class="nav__link" href="mutual-funds.html">Mutual Funds</a>
                             </li>
                             <li class="nav__item">
-                              <a class="nav__link" href="motor-insurance.html">Motor Insurance</a>
+                              <a class="nav__link" href="life-insurance.html">Term Plan Insurance</a>
                             </li>
                             <li class="nav__item">
-                              <a class="nav__link" href="com-property.html">Commercial Property Insurance</a>
+                              <a class="nav__link" href="child-future-saving.html">Child Future Saving</a>
                             </li>
                             <li class="nav__item">
-                              <a class="nav__link" href="bonds.html">Corporate Bonds</a>
+                              <a class="nav__link" href="retirement-saving.html">Retirement Planning</a>
+                            </li>
+                            <li class="nav__item">
+                              <a class="nav__link" href="general-insurance.html">Other Insurance</a>
+                            </li>
                             </li>
                             <li class="nav__item">
                               <a class="nav__link" href="pms-aif.html">PMS</a>
                             </li>
+                            <li class="nav__item">
+                              <a class="nav__link" href="itr.html">ITR Filing</a>
+                            </li>
                         </ul>
                     </a>
-                </li>
-                <li><a href="calculators.html">Financial Calculators</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
+                    </li>
+                    <li><a href="calculators.html">Financial Calculators</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </div> 
                 </div>
@@ -201,7 +200,7 @@
 
     <!-- service page -->
 
-    <div class="service-page calculator-tabs pb-60">
+    <div class="service-page section-padding calculator-tabs pb-60">
         <div class="container">
              <div class="row">
                 <div class="sip-calculator">
