--- a/general-insurance.html
+++ b/general-insurance.html
@@ -41,7 +41,7 @@
     </div>
 
     <div class="header-area">
-        <div id="sticky-wrapper" class="sticky-wrapper" style="height: 90px;"><div class="sticky-area">
+        <div id="sticky-wrapper" class="sticky-wrapper"><div class="sticky-area">
             <div class="navigation">
                 <div class="container">
                     <div class="header-inner-box">     
@@ -129,7 +129,8 @@
 
         <div class="mobile-header green-bg">
             <div class="container header-container mobile-menu-container">
-                <div class="mobile-logo"> <a class="navbar-brand fw-bold" href="index.html"><img src="images/logo-round-t.png" alt=""></a></div>
+                <div class="mobile-logo"> <a class="navbar-brand fw-bold" href="index.html"><img src="images/logo-round-t.png" alt=""></a>
+                    <span class="text-white">Money Maa</span></div>
                 <div class="mobile-menu">
                     <button class="hamburger">&#9776;</button>
                     <button class="cross">&#735;</button>
@@ -141,34 +142,32 @@
                         <ul class="nav__sub">
                             <li class="nav__item"><a class="sub__close" href="#"><i class="fas fa-chevron-left"></i> Back</a></li>
                             <li class="nav__item">
-                              <a class="nav__link" href="mutual-funds.html">Mutual Funds</a>
-                            </li>
-                            <li class="nav__item">
-                              <a class="nav__link" href="retirement-saving.html">Retirement Planning</a>
-                            </li>
-                            <li class="nav__item">
-                              <a class="nav__link" href="child-future-saving.html">Child Future Saving</a>
-                            </li>
-                            <li class="nav__item">
-                              <a class="nav__link" href="life-insurance.html">Life Insurance</a>
+                              <a class="nav__link" href="dmat.html">DEMAT</a>
                             </li>
                             <li class="nav__item">
                               <a class="nav__link" href="health-insurance.html">Health Insurance</a>
                             </li>
                             <li class="nav__item">
-                              <a class="nav__link" href="home-insurance.html">Home Insurance</a>
+                              <a class="nav__link" href="mutual-funds.html">Mutual Funds</a>
                             </li>
                             <li class="nav__item">
-                              <a class="nav__link" href="motor-insurance.html">Motor Insurance</a>
+                              <a class="nav__link" href="life-insurance.html">Term Plan Insurance</a>
                             </li>
                             <li class="nav__item">
-                              <a class="nav__link" href="com-property.html">Commercial Property Insurance</a>
+                              <a class="nav__link" href="child-future-saving.html">Child Future Saving</a>
                             </li>
                             <li class="nav__item">
-                              <a class="nav__link" href="bonds.html">Corporate Bonds</a>
+                              <a class="nav__link" href="retirement-saving.html">Retirement Planning</a>
+                            </li>
+                            <li class="nav__item">
+                              <a class="nav__link" href="general-insurance.html">Other Insurance</a>
+                            </li>
                             </li>
                             <li class="nav__item">
                               <a class="nav__link" href="pms-aif.html">PMS</a>
+                            </li>
+                            <li class="nav__item">
+                              <a class="nav__link" href="itr.html">ITR Filing</a>
                             </li>
                         </ul>
                     </a>
@@ -225,7 +224,7 @@
                 <div class="wow fadeInUp reveal" data-wow-delay="200ms" style="animation-delay: 200ms;">
                     <div class="feature-item-wrap gi-item-wrap">
                         <div class="feature-icon">
-                            <img src="images/002-group-w.png" alt="">
+                            <img src="images/keyman-i.png" alt="">
                         </div>
                         <div class="feature-content gi-content">
                             <h4>Keyman Insurance</h4>
@@ -242,7 +241,7 @@
                 <div class="wow fadeInUp reveal" data-wow-delay="300ms" style="animation-delay: 300ms;">
                     <div class="feature-item-wrap gi-item-wrap">
                         <div class="feature-icon">
-                            <img src="images/003-customer-service-w.png" alt="">
+                            <img src="images/travel-i.png" alt="">
                         </div>
                         <div class="feature-content gi-content">
                             <h4>Overseas Insurance (Travelling Insurance)</h4>
@@ -259,7 +258,7 @@
                 <div class="wow fadeInUp reveal" data-wow-delay="300ms" style="animation-delay: 400ms;">
                     <div class="feature-item-wrap gi-item-wrap">
                         <div class="feature-icon">
-                            <img src="images/003-customer-service-w.png" alt="">
+                            <img src="images/emp-i.png" alt="">
                         </div>
                         <div class="feature-content gi-content">
                             <h4>Employer-Employee Group</h4>
@@ -276,7 +275,7 @@
                 <div class="wow fadeInUp reveal" data-wow-delay="300ms" style="animation-delay: 500ms;">
                     <div class="feature-item-wrap gi-item-wrap">
                         <div class="feature-icon">
-                            <img src="images/003-customer-service-w.png" alt="">
+                            <img src="images/shop-i.png" alt="">
                         </div>
                         <div class="feature-content gi-content">
                             <h4>Shopkeepers Insurance</h4>
@@ -293,7 +292,7 @@
                 <div class="wow fadeInUp reveal" data-wow-delay="300ms" style="animation-delay: 600ms;">
                     <div class="feature-item-wrap gi-item-wrap">
                         <div class="feature-icon">
-                            <img src="images/003-customer-service-w.png" alt="">
+                            <img src="images/factory-i.png" alt="">
                         </div>
                         <div class="feature-content gi-content">
                             <h4>Factory & Godown Insurance</h4>
@@ -309,7 +308,7 @@
                 <div class="wow fadeInUp reveal" data-wow-delay="300ms" style="animation-delay: 700ms;">
                     <div class="feature-item-wrap gi-item-wrap">
                         <div class="feature-icon">
-                            <img src="images/003-customer-service-w.png" alt="">
+                            <img src="images/prof-indem-i.png" alt="">
                         </div>
                         <div class="feature-content gi-content">
                             <h4>Professional Indemnity for Doctors</h4>
@@ -325,7 +324,7 @@
                 <div class="wow fadeInUp reveal" data-wow-delay="300ms" style="animation-delay: 800ms;">
                     <div class="feature-item-wrap gi-item-wrap">
                         <div class="feature-icon">
-                            <img src="images/003-customer-service-w.png" alt="">
+                            <img src="images/fire-i.png" alt="">
                         </div>
                         <div class="feature-content gi-content">
                             <h4>Fire & Burglary (Theft) Insurance</h4>
@@ -341,7 +340,7 @@
                 <div class="wow fadeInUp reveal" data-wow-delay="300ms" style="animation-delay: 900ms;">
                     <div class="feature-item-wrap gi-item-wrap">
                         <div class="feature-icon">
-                            <img src="images/003-customer-service-w.png" alt="">
+                            <img src="images/pa.png" alt="">
                         </div>
                         <div class="feature-content gi-content">
                             <h4>Personal Accident (PA)</h4>
@@ -357,7 +356,7 @@
                 <div class="wow fadeInUp reveal" data-wow-delay="300ms" style="animation-delay: 1000ms;">
                     <div class="feature-item-wrap gi-item-wrap">
                         <div class="feature-icon">
-                            <img src="images/003-customer-service-w.png" alt="">
+                            <img src="images/household-i.png" alt="">
                         </div>
                         <div class="feature-content gi-content">
                             <h4>Household Insurance</h4>
