added clients and awards photo

--- a/about.html
+++ b/about.html
@@ -184,13 +184,6 @@
 
     <div class="breadcrumb-area section-padding pb-0">
         <div class="container">
-            <!-- <div class="row">
-                <div class="col-12">
-                    <div class="bread-bg">
-                        <img src="images/about-img.jpg" alt="" style="width: 100%;">
-                    </div>
-                </div>
-            </div> -->
             <div class="row">
                 <div class="col-xl-9 col-lg-9 col-md-9 col-12">
                     <div class="section-title">
@@ -200,17 +193,6 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="row">
-                <div class="col-xl-6 col-lg-6 col-md-6 col-12">
-                    <div class="direction-img">
-                        <img src="images/shape-about.png" alt="">
-                    </div>
-                </div>
-                <div class="col-xl-6 col-lg-6 col-md-6 col-12">
-                    <h3>Our History &amp; Goal.</h3>
-                    <p>Money Maa started 8 years ago is simple yet powerful – to provide the community with a better life through proper financial planning. She understands firsthand the challenges individuals face during their financial journey, having experienced financial stress herself while navigating the beautiful yet demanding path of motherhood. </p>
-                </div>
-            </div> -->
             <div class="row align-items-center ">
                 <div class="col-lg-3">
                     <img src="images/gayatree-lohiya.jpeg" alt="">
@@ -285,7 +267,37 @@
             </div>
         </div>
 
-
+        <div class="awards-section section-padding">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-12 text-center">
+                        <div class="section-title">
+                            <h6>AWARD & CERTIFICATIONS</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-lg-4 col-md-4 col-sm-12">
+                        <div class="award-img">
+                            <img src="images/award-of-excellence.jpeg" alt="">
+                           <div class="award-content">
+                                <h5>Award Of Excellence</h5>
+                                <p class="m-0">2020 - 2021</p>
+                           </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-4 col-md-4 col-sm-12">
+                        <div class="award-img">
+                            <img src="images/certificate-appreciation.jpeg" alt="">
+                            <div class="award-content">
+                                <h5>Certificate of Appreciation</h5>
+                                <p class="m-0">For outstanding business contribution in FY '19</p>
+                           </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <!-- about page section -->
 
