--- a/index.html
+++ b/index.html
@@ -199,12 +199,11 @@
 
     <div class="hero-area light-bg-2">
         <div class="container">
-            
             <div class="homepage-slides">
                 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="images/slider-1.jpeg" alt="">
+                        <img src="images/slider-1.jpg" alt="">
                       </div>
                       <div class="carousel-item">
                         <img src="images/slider-2.jpeg" alt="">
@@ -228,7 +227,7 @@
                       <span class="visually-hidden">Next</span>
                     </button>
                   </div>
-                </div>
+            </div>
         </div>
     </div>
 
@@ -516,11 +515,31 @@
     <!-- client section -->
 
     <div class="clients-area pb-120">
-        <div class="client-logo-wrap">
-            <img src="images/nj-mutual-fund.png" alt="nj-mutual">
-            <img src="images/star-health.png" alt="star-health">
-            <img src="images/lic-logo.png" alt="lic-logo">
-            <img src="images/hdfc-ergo.png" alt="hdfc-ergo">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-12 text-center">
+                    <div class="section-title">
+                        <h6>OUR PARTNERS</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="client-logo-wrap">
+                <img src="images/nj-mutual-fund.png" alt="nj-mutual">
+                <img src="images/star-health.png" alt="star-health">
+                <img src="images/lic-logo.png" alt="lic-logo">
+                <img src="images/hdfc-ergo.png" alt="hdfc-ergo">
+                <img src="images/boi_logo.png" alt="bank of india">
+                <img src="images/motilal-oswal-logo.png" alt="motilal oswal">
+                <img src="images/uti-logo.png" alt="uti">
+                <img src="images/nippon-logo.png" alt="nippon">
+                <img src="images/invesco-logo.png" alt="invesco">
+                <img src="images/IDBI-bank-logo.png" alt="idbi bank">
+                <img src="images/icici-lombard-logo.png" alt="icici lombard">
+                <img src="images/hdfc-bank-logo.png" alt="hdfc bank">
+                <img src="images/finserv_logo.png" alt="bajaj finserv">
+                <img src="images/bandhak_logo.png" alt="bandhak">
+                <img src="images/ABSL_logo.png" alt="absl">
+            </div>
         </div>
     </div>
 
