--- a/child-future-saving.html
+++ b/child-future-saving.html
@@ -31,13 +31,12 @@
                     </div>
                 </div>
 
-                <!-- <div class="col-xl-4 col-lg-4 col-md-4 col-12 text-end">
+                <div class="col-xl-4 col-lg-4 col-md-4 col-12 text-end">
                     <div class="social-icon">                        
-                        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/moneymaaofficial"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/moneymaaofficial/"><i class="fa-brands fa-instagram"></i></a>
                     </div>
-                </div> -->
+                </div>
             </div>
         </div>
     </div>
@@ -289,18 +288,17 @@
                        </div>
                     </div>   
                </div>
-                <!-- <div class="col-xl-3 col-lg-3 col-12 wow fadeInUp reveal" data-wow-delay="600ms" style="animation-delay: 600ms;">
+                <div class="col-xl-3 col-lg-3 col-12 wow fadeInUp reveal" data-wow-delay="600ms" style="animation-delay: 600ms;">
                     <div class="footer-widget">
                         <div class="project-gallery">
                             <h5>Social Accounts</h5>
                             <div class="social-icon">                        
-                                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                <a href="https://www.facebook.com/moneymaaofficial"><i class="fa-brands fa-facebook-f"></i></a>
+                                <a href="https://www.instagram.com/moneymaaofficial/"><i class="fa-brands fa-instagram"></i></a>
                             </div>
                         </div>
                     </div>
-                </div> -->
+                </div>
             </div>
             <div class="row">
                 <div class="col-xl-12 text-center">
